# AdmixLD

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  README.md  documentation.md
recipe/: build.sh  meta.yaml
src/: config.hpp  main.cpp
src/core/: empirical_null.cpp  empirical_null.hpp  hybrid_index.cpp  hybrid_index.hpp  residualize.cpp  residualize.hpp  scan_blocks.cpp  scan_blocks.hpp  scan_dynamic_hi.cpp  scan_dynamic_hi.hpp  scan_markers.cpp  scan_markers.hpp  types.hpp
src/io/: bed.cpp  bed.hpp  msp_windows.cpp  msp_windows.hpp  ref_freq.cpp  ref_freq.hpp  sample_vector.cpp  sample_vector.hpp  vcf_windows.cpp  vcf_windows.hpp
tests/: _test_bash_commands.sh  test_smoke.sh
tests/data/: indv_test.txt  test.bed
